# rocket-rest-api-with-jwt

./: .env.sample  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  Rocket.toml.sample  docker-compose.local.yml  docker-compose.prod.yml
.github/workflows/: ci_action.yml  docker_action.yml
docker/prod/: Dockerfile
src/: config.rs  jwt.rs  main.rs  schema.rs
src/api/: account_controller.rs  address_book_controller.rs  mod.rs
src/constants/: message_constants.rs  mod.rs
src/models/: login_history.rs  mod.rs  person.rs  response.rs  user.rs
src/services/: account_service.rs  address_book_service.rs
